--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,6 @@
 FROM golang:1.10.3
 
 RUN go get -u github.com/golang/dep/cmd/dep
-
-RUN mkdir /go/src
-ADD ./api /go/src
+ADD . /go/src
 
 WORKDIR /go/src
