--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,9 @@
 FROM golang:1.10.3
 
 RUN go get -u github.com/golang/dep/cmd/dep
-ADD . /go/src
 
-WORKDIR /go/src
+RUN mkdir /go/src/app
+ADD ./app /go/src
+ADD ./startserver.sh /go/src/app
+
+WORKDIR /go/src/app
