Remove app directory

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.10.3
 
 RUN go get -u github.com/golang/dep/cmd/dep
 
-RUN mkdir /go/src/app
-ADD ./app /go/src/app
+RUN mkdir -p /go/src/api
+ADD . /go/src/api
 
 WORKDIR /go/src/app
