Fix package structure

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,4 +5,6 @@ RUN go get -u github.com/golang/dep/cmd/dep
 RUN mkdir -p /go/src/api
 ADD . /go/src/api
 
-WORKDIR /go/src/app
+WORKDIR /go/src/api
+
+RUN dep ensure
