Add email validator package

--- a/api/Gopkg.toml
+++ b/api/Gopkg.toml
@@ -21,3 +21,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/qor/qor"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/badoux/checkmail"
