--- a/development.env
+++ b/development.env
@@ -1,3 +1,4 @@
+GOOGLE_APPLICATION_CREDENTIALS=/go/src/api/secrets.json
 MYSQL_ROOT_PASSWORD=password
 MYSQL_USER=shokubunka
 MYSQL_DATABASE=shokubunka_dev
