--- a/development.env
+++ b/development.env
@@ -1,4 +1,5 @@
 GOOGLE_APPLICATION_CREDENTIALS=/go/src/api/secrets.json
+BUCKET_NAME=shokubunka-media-image
 MYSQL_ROOT_PASSWORD=password
 MYSQL_USER=shokubunka
 MYSQL_DATABASE=shokubunka_dev
